2006-02-05  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/libs/Makefile.am:
	* docs/libs/gst-plugins-base-libs-docs.sgml:
	* docs/libs/gst-plugins-base-libs-sections.txt:
	* gst-libs/gst/tag/gstid3tag.c: (gst_tag_from_id3_tag):
	* gst-libs/gst/tag/gstvorbistag.c:
	* gst-libs/gst/tag/tag.h:
	* gst-libs/gst/tag/tags.c:
	  Add libgsttag to the docs.

2006-02-05  Julien MOUTTE  <julien@moutte.net>

	* ext/pango/gsttextoverlay.c: (gst_text_overlay_finalize),
	(gst_text_overlay_init), (gst_text_overlay_src_event),
	(gst_text_overlay_collected): Fix clockoverlay.

2006-02-05  Tim-Philipp Müller  <tim at centricular dot net>

	* docs/libs/compiling.sgml:
	  Fix typo: it's pkg-config, not pkg-gconfig

	* docs/libs/gst-plugins-base-libs-docs.sgml:
	* docs/libs/gst-plugins-base-libs-sections.txt:
	* docs/libs/tmpl/gstgconf.sgml:
	  There is no libgstgconf in 0.10, remove it
	  from the docs.

2006-02-05  Julien MOUTTE  <julien@moutte.net>

	* docs/libs/tmpl/gstcolorbalance.sgml: Updated.
	* ext/pango/gsttextoverlay.c: (gst_text_overlay_init),
	(gst_text_overlay_src_event), (gst_text_overlay_collected):
	* gst/subparse/gstsubparse.c: (gst_sub_parse_dispose),
	(gst_sub_parse_class_init), (gst_sub_parse_init),
	(gst_sub_parse_src_event), (parse_mdvdsub), (parse_subrip),
	(parse_mpsub), (parser_state_init), (handle_buffer),
	(gst_sub_parse_chain), (gst_sub_parse_sink_event), (plugin_init):
	* gst/subparse/gstsubparse.h: Introduce seeking code.

2006-02-05  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/tag/gstvorbistag.c: (gst_vorbis_tag_add):
	  Add comment about LANGUAGE tag inconsistency (we want
	  ISO-639-1, but extract three-letter identifiers?)

	* po/POTFILES.in:
	  Add two translatable files.

2006-02-05  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-libs/gst/tag/Makefile.am:
	* gst-libs/gst/tag/gstvorbistag.c: (gst_vorbis_tag_add):
	* gst-libs/gst/tag/tag.h:
	* gst-libs/gst/tag/tags.c: