@@ -94,6 +94,18 @@ gst_ring_buffer_advance
 <SECTION>
 <FILE>gsttag</FILE>
 <INCLUDE>gst/tag/tag.h</INCLUDE>
+GST_TAG_MUSICBRAINZ_TRACKID
+GST_TAG_MUSICBRAINZ_ARTISTID
+GST_TAG_MUSICBRAINZ_ALBUMID
+GST_TAG_MUSICBRAINZ_ALBUMARTISTID
+GST_TAG_MUSICBRAINZ_TRMID
+GST_TAG_MUSICBRAINZ_SORTNAME
+gst_tag_register_musicbrainz_tags
+</SECTION>
+
+<SECTION>
+<FILE>gsttagvorbis</FILE>
+<INCLUDE>gst/tag/tag.h</INCLUDE>
 <SUBSECTION>
 gst_tag_from_vorbis_tag
 gst_tag_to_vorbis_tag
@@ -102,20 +114,17 @@ gst_tag_to_vorbis_comments
 <SUBSECTION>
 gst_tag_list_from_vorbiscomment_buffer
 gst_tag_list_to_vorbiscomment_buffer
+</SECTION>
+
+<SECTION>
+<FILE>gsttagid3</FILE>
+<INCLUDE>gst/tag/tag.h</INCLUDE>
 <SUBSECTION>
 gst_tag_id3_genre_count
 gst_tag_id3_genre_get
 gst_tag_list_new_from_id3v1
 gst_tag_from_id3_tag
 gst_tag_to_id3_tag
-<SUBSECTION>
-GST_TAG_MUSICBRAINZ_TRACKID
-GST_TAG_MUSICBRAINZ_ARTISTID
-GST_TAG_MUSICBRAINZ_ALBUMID
-GST_TAG_MUSICBRAINZ_ALBUMARTISTID
-GST_TAG_MUSICBRAINZ_TRMID
-GST_TAG_MUSICBRAINZ_SORTNAME
-gst_tag_register_musicbrainz_tags
 </SECTION>
 
 <SECTION>
