@@ -19,6 +19,20 @@
  * Boston, MA 02111-1307, USA.
  */
 
+/**
+ * SECTION:gsttagvorbis
+ * @short_description: tag mappings and support functions for plugins
+ *                     dealing with vorbiscomments
+ * @see_also: #GstTagList
+ * 
+ * <refsect2>
+ * <para>
+ * Contains various utility functions for plugins to parse or create
+ * vorbiscomments and map them to and from #GstTagList<!-- -->s.
+ * </para>
+ * </refsect2>
+ */
+
 #ifdef HAVE_CONFIG_H
 #include "config.h"
 #endif
